# graphics

./: .gitignore  README.md  contact.html  functioning.html  index.html  mydraw.html  mydraw_class.html  params.json  tutorial_01.cpp
A1/A1_basecode/: Makefile  Room.draw  default.draw  mydraw.cpp  mydraw_class.cpp  mydraw_class.hpp
A1_basecode/A1_basecode/: mydraw.cpp  mydraw_class.cpp  mydraw_class.hpp
A2/part_1/: CMakeLists.txt  README.md  run.sh
A2/part_1/include/: bicycle.cpp  circle.hpp  combo.hpp  cube.hpp  cylinder.hpp  frame.hpp  front_handle.hpp  generic_object.hpp  joint.hpp  object.hpp  objects.hpp  quadric.hpp  quadric_sample.hpp  sphere.hpp  square.hpp  torus.hpp  torus_old.hpp  triangle.hpp  utils.hpp  viewport.hpp  wheel.hpp
A2/part_1/include/glut/: glut_framework.hpp  keyboard.hpp  performance_timer.hpp  point.hpp  vector.hpp
A2/part_1/src/: cube.cpp  cube_old.cpp  generic_object.cpp  main.cpp  viewport.cpp
A2/part_1/src/glut/: glut_framework.cpp  keyboard.cpp  main.cpp  performance_timer.cpp
